--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 22 09:18:20 COT 2018
-sdk.dir=C\:\\Users\\cgonzalez\\AppData\\Local\\Android\\Sdk
+#Mon Jan 29 12:05:44 COT 2018
+sdk.dir=C\:\\Users\\cvillanueva\\AppData\\Local\\Android\\Sdk
